--- a/app.json
+++ b/app.json
@@ -1,7 +1,5 @@
 {
-    "name": "XrayHeroku",
-    "description": "xray websocket proxy on heroku",
-    "keywords": ["xray vmess vless trojan shadowsocks socks tor"],
+    "name": "HyA",
     "env": {
         "AA": {
             "description": "初阶用户只需修改以下AUUID点击页面最后的Deploy app按钮即可开始部署",
@@ -12,16 +10,16 @@
             "value": "24b4b1e1-7a89-45f6-858c-242cf53b5bdb"
         },
         "CADDYIndexPage": {
-            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/Lbingyi/HerokuXray/blob/master/etc/CADDYIndexPage.md",
-            "value": "https://github.com/AYJCSGM/mikutap/archive/master.zip"
+            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/riverboat123/HyA/blob/master/etc/CADDYIndexPage.md",
+            "value": "https://github.com/StartBootstrap/startbootstrap-new-age/archive/master.zip"
         },
         "CONFIGCADDY": {
             "description": "自定义网络地址读取配置运行CADDY，不熟悉CADDY配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/main/etc/Caddyfile"
+            "value": "https://raw.githubusercontent.com/riverboat123/HyA/main/etc/Caddyfile"
         },
         "CONFIGXRAY": {
             "description": "自定义网络地址读取配置运行xray，不熟悉xray配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/main/etc/xray.json"
+            "value": "https://raw.githubusercontent.com/riverboat123/HyA/main/etc/xray.json"
         },
         "ParameterSSENCYPT": {
             "description": "SS加密方式，查看支持协议: https://www.v2fly.org/config/protocols/shadowsocks.html",
@@ -29,10 +27,10 @@
         },
         "StoreFiles": {
             "description": "自定义网络地址读取存储文件列表",
-            "value": "https://raw.githubusercontent.com/Lbingyi/HerokuXray/main/etc/StoreFiles"
+            "value": "https://raw.githubusercontent.com/riverboat123/HyA/main/etc/StoreFiles"
         }
     },
-    "website": "https://github.com/Lbingyi/HerokuXray",
-    "repository": "https://github.com/Lbingyi/HerokuXray",
+    "website": "https://github.com/riverboat123/HyA",
+    "repository": "https://github.com/riverboat123/HyA",
     "stack": "container"
 }
